moving css to correct folders

--- a/prework/intro-to-SMACSS/starter-code/index.html
+++ b/prework/intro-to-SMACSS/starter-code/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <title>Choco Pizza</title>
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="lab/base.css">
+  <link rel="stylesheet" href="lab/layout.css">
+  <link rel="stylesheet" href="lab/modules.css">
 </head>
 
 <body>
