--- a/class-01/index.html
+++ b/class-01/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>SMACCS Responsive</title>
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
 </html>
