--- a/class-01/index.html
+++ b/class-01/index.html
@@ -4,4 +4,14 @@
     <title>SMACCS Responsive</title>
     <link rel="stylesheet" href="styles/style.css"/>
   </head>
+  <body>
+    <header>
+      <h1>Responsive</h1>
+      <nav>
+        <ul>
+          <li>A</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
