Working on SMACCS

--- a/prework/intro-to-SMACSS/starter-code/HTML/index.html
+++ b/prework/intro-to-SMACSS/starter-code/HTML/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <title>SMACSS Responsive Demo</title>
+      <link rel="stylessheet" href="styles/rest.css">
       <link rel="stylesheet" href="styles/styles.css" />
     </head>
     <body>
